tests/exclude/06-no-variants.stderr
error: Missing field `variants`
 --> tests/exclude/06-no-variants.rs:4:11
  |
4 |   #[exclude(arg(
  |  ___________^
5 | |     ident = Terrestrial,
6 | |     derive(Debug, PartialEq, Clone, Copy)
7 | | ))]
  | |_^
